changed the nav links with bigger text and made them bigger on hover. fixed an issue with the footer covering content.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,11 +8,19 @@
 }
 .nav-link{
   color:white;
+  font-size: 1.2em;
+  text-align: center;
+}
+
+.nav-link:hover{
+  color:#2a6328;
+  font-size: 1.4em;
 }
 
 .navbar-brand{
   color: white;
   font-size: 1.7em;
+  padding-left: 2px;
 }
 
 .navbar-brand:hover{
@@ -112,6 +120,10 @@
 
 .inlineButton {
   display: inline;
+}
+
+body{
+  padding-bottom: 100px;
 }
 
 * {
